# AXIOM_CLI

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  change_log.txt  claude.md  future_tasks.md
internal/core/: domain.hpp  error.hpp  paths.hpp  price.hpp  types.hpp
internal/engine/: analysis_engine.cpp  analysis_engine.hpp  data_engine.cpp  data_engine.hpp  data_store.hpp  indicators.hpp  sqlite_store.cpp  sqlite_store.hpp
internal/service/: analysis_service.cpp  analysis_service.hpp  config_service.cpp  config_service.hpp  repl_service.cpp  repl_service.hpp
internal/ui/: heatmap.cpp  heatmap.hpp  rendering.hpp  ui.hpp
internal/utils/: logger.hpp
src/cpp/: axiom_repl.cpp  markov_engine.cpp
src/cpp/core/: buffers.hpp  domain.hpp  error.hpp  limiter.hpp  paths.hpp
src/cpp/engine/: analysis_engine.cpp  analysis_engine.hpp  data_engine.cpp  data_engine.hpp  indicators.hpp
src/cpp/tests/: test_analysis.cpp  test_price.cpp
src/cpp/ui/: heatmap.cpp  ui.hpp
tests/: test_ui.cpp
